# Babeler-offline-ai-assistant

./: README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: python_tests.yml
assistant/: README.md
assistant/json/: config.json  json_help.py  memory.json  personality.json  predicate_map.json
assistant/python/: babbeler.py  command_parser.py  document_parser.py  jarvis.py  knowledge_base.py  offline_assistant.py  semantics.py  stt.py  stt_text.py  tts.py  tts_text.py
assistant/text_bank/: example.txt
body/: README.md  rf_scan.py  system_monitor.cc  system_monitoring.py
body/__pycache__/: tts_speaker.cc
body/apps/: get_temp  system_monitor  tts_speaker
body/c++/: system_monitor.cc
body/python/: rf_scan.py  system_monitoring.py
head/: README.md  command_parser.py  jarvis.py  personality_replies.json  stt.py  tts.py
head/json/: config.json
head/python/: command_parser.py  jarvis.py
tests/: test_command_parser.py  test_question_answer.py  test_triple.py
